--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -300,7 +300,12 @@
         "title": "Langue"
       }
     },
-    "subscription": {
+    "fileUpload": {
+    "uploadRolledBack": "Upload of \"{{filename}}\" failed and was rolled back."
+  },
+  "subscription": {
+    "templateLimitReached": "You've reached your template limit for this plan",
+    "templateLimitExceeded": "You can upload {{available}} more template(s). You're trying to upload {{requested}}."
       "subtitle": "Consultez les détails de votre plan et les statistiques d'utilisation",
       "currentPlan": "Plan actuel",
       "usage": "Statistiques d'utilisation",
