--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -300,7 +300,12 @@
         "title": "Jazyk"
       }
     },
-    "subscription": {
+    "fileUpload": {
+    "uploadRolledBack": "Upload of \"{{filename}}\" failed and was rolled back."
+  },
+  "subscription": {
+    "templateLimitReached": "You've reached your template limit for this plan",
+    "templateLimitExceeded": "You can upload {{available}} more template(s). You're trying to upload {{requested}}."
       "subtitle": "Zobrazení detailů plánu a statistik využití",
       "currentPlan": "Aktuální plán",
       "usage": "Statistiky využití",
