--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -300,7 +300,12 @@
         "title": "Sprache"
       }
     },
-    "subscription": {
+    "fileUpload": {
+    "uploadRolledBack": "Upload of \"{{filename}}\" failed and was rolled back."
+  },
+  "subscription": {
+    "templateLimitReached": "You've reached your template limit for this plan",
+    "templateLimitExceeded": "You can upload {{available}} more template(s). You're trying to upload {{requested}}."
       "subtitle": "Sehen Sie Ihre Plandetails und Nutzungsstatistiken ein",
       "currentPlan": "Aktueller Plan",
       "usage": "Nutzungsstatistiken",
