--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -298,7 +298,12 @@
         "title": "Nyelv"
       }
     },
-    "subscription": {
+    "fileUpload": {
+    "uploadRolledBack": "Upload of \"{{filename}}\" failed and was rolled back."
+  },
+  "subscription": {
+    "templateLimitReached": "You've reached your template limit for this plan",
+    "templateLimitExceeded": "You can upload {{available}} more template(s). You're trying to upload {{requested}}."
       "subtitle": "Tekintse meg a csomag részleteit és a használati statisztikákat",
       "currentPlan": "Jelenlegi csomag",
       "usage": "Használati statisztikák",
