--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -300,7 +300,12 @@
         "title": "Lingua"
       }
     },
-    "subscription": {
+    "fileUpload": {
+    "uploadRolledBack": "Upload of \"{{filename}}\" failed and was rolled back."
+  },
+  "subscription": {
+    "templateLimitReached": "You've reached your template limit for this plan",
+    "templateLimitExceeded": "You can upload {{available}} more template(s). You're trying to upload {{requested}}."
       "subtitle": "Visualizza i dettagli del piano e le statistiche di utilizzo",
       "currentPlan": "Piano attuale",
       "usage": "Statistiche di utilizzo",
