--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -300,7 +300,12 @@
         "title": "言語"
       }
     },
-    "subscription": {
+    "fileUpload": {
+    "uploadRolledBack": "Upload of \"{{filename}}\" failed and was rolled back."
+  },
+  "subscription": {
+    "templateLimitReached": "You've reached your template limit for this plan",
+    "templateLimitExceeded": "You can upload {{available}} more template(s). You're trying to upload {{requested}}."
       "subtitle": "プランの詳細と使用統計を表示します",
       "currentPlan": "現在のプラン",
       "usage": "使用統計",
