--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -207,7 +207,12 @@
         "title": "Jazyk"
       }
     },
-    "subscription": {
+    "fileUpload": {
+    "uploadRolledBack": "Upload of \"{{filename}}\" failed and was rolled back."
+  },
+  "subscription": {
+    "templateLimitReached": "You've reached your template limit for this plan",
+    "templateLimitExceeded": "You can upload {{available}} more template(s). You're trying to upload {{requested}}.",
       "title": "Predplatné",
       "subtitle": "Správa predplatného a zobrazenie štatistík využitia",
       "currentPlan": "Aktuálny plán",
