aded charts to admin dashboard, fixed todat processed count for admin

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -219,7 +219,7 @@
     "selectedFiles": "Selected file(s): {{count}}",
     "cancelUpload": "Cancel",
     "selectFolder": "Select folder",
-    "rootFolder": "Root (All Templates)",
+    "rootFolder": "Root",
     "dropFilesHere": "Drop files here",
     "dropFilesHint": "Release to upload .docx files",
     "uploadToFolder": "Upload to folder",
@@ -389,7 +389,7 @@
   },
   "folders": {
     "title": "Folders",
-    "allTemplates": "All Templates",
+    "allTemplates": "Root",
     "favorites": "Favorites",
     "recent": "Recent",
     "newFolder": "New Folder",
@@ -415,7 +415,7 @@
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
-    "rootFolder": "Root (All Templates)",
+    "rootFolder": "Root",
     "folderCreated": "Folder \"{{name}}\" created successfully",
     "folderRenamed": "Folder renamed to \"{{name}}\"",
     "folderDeleted": "Folder \"{{name}}\" deleted",
