fixed counting downloaded templates

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -240,6 +240,7 @@
     "downloadTemplate": "Download template",
     "downloadSuccess": "Template \"{{filename}}\" downloaded successfully",
     "downloadFailed": "Failed to download file. Please try again.",
+    "serverBusy": "Server is busy, please try again in a few minutes.",
     "previewTemplate": "Preview template",
     "previewFailed": "Failed to load preview. Please try again.",
     "deleteTemplate": "Delete template",
@@ -491,6 +492,10 @@
     "exportSuccess": "Successfully exported {{templates}} templates and {{folders}} folders",
     "exportFailed": "Failed to create backup",
     "noSelection": "Please select at least one folder or template to export",
+    "serverBusy": "Server is busy, please try again in a few minutes.",
+    "noTemplatesApproved": "No templates were approved for export.",
+    "tierLimitExceeded": "Export limit exceeded: {{requested}} requested, {{limit}} allowed",
+    "rateLimitExceeded": "Too many requests. Please try again in {{seconds}} seconds.",
     "importTitle": "Import Backup",
     "importDescription": "Restore templates and folders from a backup file",
     "dropFileHere": "Drop backup file here",
